--- a/nginx-configmap.yaml
+++ b/nginx-configmap.yaml
@@ -1,59 +1,46 @@
-apiVersion: v1
 kind: ConfigMap
+apiVersion: v1
 metadata:
   name: nginx-conf
   namespace: nicholson-adlaon-dev
+  uid: 7ad6d66d-9dea-4d44-a2f0-06e4b7d1eebe
+  resourceVersion: '4238024168'
+  creationTimestamp: '2024-04-23T07:23:52Z'
+  managedFields:
+    - manager: Mozilla
+      operation: Update
+      apiVersion: v1
+      time: '2024-04-26T05:47:30Z'
+      fieldsType: FieldsV1
+      fieldsV1:
+        'f:data':
+          .: {}
+          'f:nginx.conf': {}
 data:
   nginx.conf: |
-server {
-    listen       8080;
-    server_name  localhost;
-
-    #access_log  /var/log/nginx/host.access.log  main;
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+    worker_processes  auto;
+    error_log  /var/log/nginx/error.log notice;
+    pid        /tmp/nginx.pid;
+    events {
+    worker_connections  4096;
     }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    http {
+        include  /etc/nginx/mime.types;
+        include /etc/nginx/conf.d/*.conf;
+        client_body_temp_path /tmp/client_temp;
+        proxy_temp_path       /tmp/proxy_temp_path;
+        fastcgi_temp_path     /tmp/fastcgi_temp;
+        uwsgi_temp_path       /tmp/uwsgi_temp;
+        scgi_temp_path        /tmp/scgi_temp;
+        server {
+            listen 8080;
+            listen [::]:8080;
+            
+            server_name 172.30.110.148; # POD_IP
+            
+            location / {
+                 proxy_pass http://172.30.108.72:8080/;
+                 proxy_set_header Host $host;
+            }
+        }
     }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-    # example nginx reverse proxy config file $(IP_ADDRESS) change to IP_POD
-    # /etc/nginx/sites-available/default
-    location /petclinic {
-    proxy_pass http://172.30.108.72:8080;
-    proxy_buffering off;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port $server_port;
-}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
-}
